Update package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
-    "name": "tekmin/js-push-notification",
+    "name": "jobstreet/js-push-notification",
+    "replace": {
+        "tekmin/js-push-notification": "dev-master"
+    },
     "description": "JS Push Notification SDK",
     "keywords": ["JS", "sdk", "push notification"],
     "type": "library",
