--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "guzzlehttp/guzzle": ">=3.7.0,<=3.9.9"
+        "guzzle/guzzle": "~3.7"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*"
